--- a/.github/workflows/dailymain.yml
+++ b/.github/workflows/dailymain.yml
@@ -3,13 +3,15 @@ name: BMS DailyBO 1–9 + Combine (Matrix)
 on:
   workflow_dispatch:
   schedule:
-    # Every hour at HH:10 (UTC)
     - cron: "0 * * * *"
 
 permissions:
   contents: write
 
 jobs:
+# =====================================================
+# 1️⃣ SHARDS (UNCHANGED)
+# =====================================================
   shards:
     name: Shard ${{ matrix.shard }}
     runs-on: ubuntu-latest
@@ -18,24 +20,21 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        shard: [1, 2, 3, 4, 5, 6, 7, 8, 9]
+        shard: [1,2,3,4,5,6,7,8,9]
 
     steps:
-      # ---------------- CHECKOUT ----------------
       - name: 🧾 Checkout repo
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
           persist-credentials: true
 
-      # ---------------- PYTHON ----------------
       - name: 🐍 Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
-      # ---------------- CHROME ----------------
-      - name: 🌐 Install Google Chrome
+      - name: 🌐 Install Chrome
         run: |
           sudo apt-get update
           sudo apt-get install -y wget unzip
@@ -44,72 +43,114 @@ jobs:
           rm -f google-chrome-stable_current_amd64.deb
           google-chrome --version
 
-      # ---------------- DEPENDENCIES ----------------
-      - name: 📦 Install Python dependencies
+      - name: 📦 Install dependencies
         run: |
-          python -m pip install --upgrade pip
           pip install selenium webdriver-manager cloudscraper aiohttp pytz
 
-      # ---------------- RUN SHARD ----------------
       - name: 🚀 Run shard scraper
-        run: |
-          python bmsdaily${{ matrix.shard }}.py
+        run: python bmsdaily${{ matrix.shard }}.py
 
-      # ---------------- COMMIT & PUSH SHARD DATA ----------------
-      - name: 💾 Commit shard output
+      - name: 💾 Commit & push shard data
         run: |
           git config user.name "github-actions"
           git config user.email "actions@github.com"
 
-          git status
           git add daily/
-          git commit -m "Daily BMS shard ${{ matrix.shard }} ($(date +'%Y-%m-%d'))" || echo "Nothing to commit"
+          git commit -m "Daily BMS shard ${{ matrix.shard }} ($(date +'%Y-%m-%d %H:%M'))" || exit 0
 
-          # retry-safe push
           for i in 1 2 3; do
             git pull --rebase origin main || true
-            git push origin main && break
-            echo "Retry push $i..."
+            git push origin main && exit 0
             sleep 3
           done
 
           git push --force-with-lease origin main || true
 
+# =====================================================
+# 2️⃣ COMBINER (HARDENED + AUTO-RETRY)
+# =====================================================
   combine:
-    name: Combine all shards
+    name: Combine all shards (Safe)
     needs: shards
     runs-on: ubuntu-latest
-    timeout-minutes: 20
+    timeout-minutes: 30
+
+    # 🔒 Only ONE combiner ever
+    concurrency:
+      group: bms-combiner
+      cancel-in-progress: false
 
     steps:
-      # ---------------- CHECKOUT ----------------
       - name: 🧾 Checkout repo
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
           persist-credentials: true
 
-      # ---------------- PYTHON ----------------
       - name: 🐍 Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
-      # ---------------- COMBINE ----------------
-      - name: 🔗 Combine shard JSONs
+      - name: 🔁 Safe combine + push (retry loop)
         run: |
-          pip install pytz
-          python combine_dailyshards.py
+          set -e
 
-      # ---------------- COMMIT & PUSH FINAL FILES ----------------
-      - name: 💾 Commit final combined JSONs
-        run: |
           git config user.name "github-actions"
           git config user.email "actions@github.com"
 
-          git status
-          git add daily/
-          git commit -m "Final combined BMS data ($(date +'%Y-%m-%d'))" || echo "Nothing to commit"
+          MAX_TRIES=6
+          TRY=1
 
-          git pull --rebase origin main || true
-          git push origin main || git push --force-with-lease origin main
+          while [ $TRY -le $MAX_TRIES ]; do
+            echo "🔁 Combine attempt $TRY / $MAX_TRIES"
+
+            # Always rebuild on latest main
+            git fetch origin main
+            git reset --hard origin/main
+
+            pip install pytz
+            python combine_dailyshards.py
+
+            git add daily/
+
+            if git diff --cached --quiet; then
+              echo "✅ No changes after combine"
+              exit 0
+            fi
+
+            git commit -m "Final combined BMS data ($(date -u +'%Y-%m-%d %H:%M UTC'))"
+
+            if git push origin main; then
+              echo "✅ Combine push successful"
+              exit 0
+            fi
+
+            echo "⚠ Push failed — main moved. Retrying..."
+            TRY=$((TRY+1))
+            sleep 5
+          done
+
+          echo "❌ Combine failed after $MAX_TRIES attempts"
+          exit 1
+
+# =====================================================
+# 3️⃣ AUTO RE-RUN COMBINER ON FAILURE
+# =====================================================
+  retry-combine:
+    name: Auto retry combiner
+    needs: combine
+    if: failure()
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: 🔁 Trigger workflow again
+        uses: actions/github-script@v7
+        with:
+          script: |
+            await github.rest.actions.createWorkflowDispatch({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              workflow_id: context.workflow,
+              ref: context.ref
+            });
